# canopy-flow

./: CMakeLists.txt  LICENSE  README
data/: Aspen_Wind.txt  Aspen_canopy_distribution.txt  Corn_Wind.txt  Corn_canopy_distribution.txt  Hardwood_Wind.txt  Hardwood_canopy_distribution.txt  Jack_Pine_Wind.txt  Jack_Pine_canopy_distribution.txt  Loblolly_Pine_Wind.txt  Loblolly_Pine_canopy_distribution.txt  Rice_Wind.txt  Rice_canopy_distribution.txt  Scots_Pine_Wind.txt  Scots_Pine_canopy_distribution.txt  Spruce_Wind.txt  Spruce_canopy_distribution.txt
data/orig/: Aspen_Wind.m  Corn_Wind.m  Hardwood_Wind.m  Jack_Pine_Wind.m  Loblolly_Pine_Wind.m  Rice_Wind.m  Scots_Pine_Wind.m  Spruce_Wind.m
doc/: Canopy_Flow_Model.m
source/: canopyFlow.cpp  canopyFlow.h  main.cpp
src/: canopy.cpp  canopy.h  canopyFlow.cpp  canopyFlow.h  canopy_asymmetric_gaussian_distribution.cpp  canopy_asymmetric_gaussian_distribution.h  canopy_double_gaussian_distribution.cpp  canopy_double_gaussian_distribution.h  canopy_normal_distribution.cpp  canopy_normal_distribution.h  canopy_triangle_distribution.cpp  canopy_triangle_distribution.h  canopy_uniform_distribution.cpp  canopy_uniform_distribution.h  main.cpp  main.cxx  main_compare_albini.cpp  massman_distribution.cpp  massman_distribution.h  measured_distribution.cpp  measured_distribution.h
swig/: canopyFlowSwig.cpp  canopyFlowSwig.h  canopyFlowSwig.i
trunk/: CMakeLists.txt
trunk/doc/: Canopy_Flow_Model_VF.m
trunk/src/: canopy.cpp  canopy.h  canopyFlow.cpp  canopyFlow.h  canopy_normal_distribution.cpp  canopy_triangle_distribution.cpp  main.cpp  massman_distribution.cpp  massman_distribution.h  measured_distribution.cpp
